# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  Reademe.md  Readme.md  Untitled Diagram.drawio  Webserv.md  out
test/: CMakeLists.txt  CheckServerTest.cpp  ConfigParsingTest.cpp  ConfigProcessingTest.cpp  ConfigTest.cpp  LimitExceptNodeTest.cpp  LocationNodeTest.cpp  LocationTest.cpp  MainNodeTest.cpp  ServerConfigTest.cpp  ServerNodeTest.cpp  ServerPreconfigTest.cpp  ServerTest.cpp  main_test.cpp
test/cgi_tests/: test_cgi_python.py
test/lib/docs/: gmock_cook_book.md
test/system_tests/: simple_index_check_test.py
test/system_tests/test_files_to_try_to_upload/: get_distros.sh  test_all.sh
test/system_tests/test_requests_for_netcat/: manual_send.sh  manual_send_request.txt  save_upload_request.sh  simple_get.txt
test/system_tests/test_requests_for_netcat/broken/: null_test_null_request_size_-1.txt  null_test_null_request_size_too_small.txt  post_body_no_headers.txt
test/system_tests/test_requests_for_netcat/upload/: 10_g.txt  10_g_expect_continue.txt  no_boundary_10_g.txt  no_content_length_10_g.txt  no_content_type_10_g.txt  no_metadata_in_body_10_g.txt  no_user_agent_10_g.txt
test/test_resources/: correct_config.conf  correct_config_in_one_line.conf  correct_config_mixed_up.conf  correct_config_multiple_directives_one_line.conf  correct_config_no_close_brace.conf  corrupted_config_empty_block.conf  corrupted_config_excess_semicolon.conf  corrupted_config_missing_semicolon.conf  corrupted_config_multiple_locations_for_one_path.conf  corrupted_config_no_open.conf  corrupted_config_no_semicolon.conf  test_body.txt
test/test_resources/different_max_body_sezes/: nginx.conf
test/test_resources/exact_not_found_handling/: nginx.conf
test/test_resources/exact_not_found_handling/www/loc_2/: index.html
test/test_resources/index_order/: nginx_empty_loc.conf  nginx_no_index_defined.conf  nginx_root_redefined.conf  simple_index_check.conf
test/test_resources/index_order/www/: index_1.html
test/test_resources/index_order/www/loc_1/: index_2.html
test/test_resources/index_order/www/loc_4/: index.html
test/test_resources/limit_except/: nginx_get.conf  nginx_post.conf
test/test_resources/limit_except/www/loc_1/: index.html
test/test_resources/limit_except/www/loc_1/loc_1_1/: index.html
test/test_resources/limit_except/www/loc_2/: index.html
test/test_resources/limit_except/www/loc_3/: index.html
test/test_resources/limit_except/www/loc_4/: index.html
test/test_resources/nested_locations/: nginx.conf
test/test_resources/priority/: nginx.conf
test/test_resources/priority/www/: root_index.html
test/test_resources/priority/www/loc_1/: index.html
test/test_resources/priority/www/loc_2/: index.html
test/test_resources/priority/www/loc_3/: index.html
test/test_resources/redirection/: nginx.conf
test/test_resources/simple/: nginx.conf
test/test_resources/test1/: nginx.conf
test/test_resources/test1/default/: nginx.conf
test/test_resources/test_config_samples/: correct_config.conf
test/test_resources/test_files_to_try_to_upload/: get_distros.sh  test_all.sh
test/test_resources/test_requests_for_netcat/: emulate_upload_request.sh  manual_send.sh  manual_send_request.txt  null_test_null_request.txt  simple_get.txt
test/test_resources/test_requests_for_netcat/broken/: null_test_null_request_size_too_big.txt  null_test_null_request_size_zero.txt  post_body_no_headers.txt
test/test_resources/test_requests_for_netcat/too_empty/: get_no_headers_3_linebrakes.txt
test/test_resources/test_requests_for_netcat/upload/: 10_g.txt  10_g_expect_continue.txt  no_boundary_10_g.txt  no_content_length_10_g.txt  no_content_type_10_g.txt  no_metadata_in_body_10_g.txt  no_user_agent_10_g.txt
test/tests/config_file_test/: ConfigParsingTest.cpp
test/tests/config_test/config_class_test/: ConfigFileCheckTest.cpp  ConfigMainContextCheck.cpp  ConfigServerSubcontextsHandlingTest.cpp
test/tests/config_test/config_class_test/setup_from_file_config/: ConfigFileCheckTest.cpp  ConfigSetupFromFileTest.cpp  ParsingToolsTest.cpp
test/tests/config_test/location_class_test/functionality_test/: LocationFindSublocationTest.cpp
test/tests/config_test/location_class_test/setup_test/: HandleLimitExceptTest.cpp  HandleReturnTest.cpp  LocationConstructorTest.cpp  LocationProcessDirectivesTest.cpp
test/tests/location_class_test/functionality_test/: LocationFindSublocationTest.cpp
test/tests/location_class_test/setup_test/: HandleAddErrPagesTest.cpp  HandleLimitExceptTest.cpp  HandleReturnTest.cpp  HandleUpdateIndexTest.cpp  LocationConstructorTest.cpp  LocationMarkDirectiveTest.cpp  LocationProcessDirectivesTest.cpp
test/tests/node_test/: HandleLocationContextTest.cpp  LimitExceptContextTest.cpp  LimitExceptNodeTest.cpp  LocationContextTest.cpp  LocationNodeTest.cpp  MainNodeTest.cpp  ServerNodeTest.cpp
test/tests/server_configuration_test/setup_test/: HandleSubcontextsTest.cpp
test/tests/server_test/: ConfigFiles.h
test/tests/server_test/functionality_test/: FindIndexTest.cpp  LocationSearchTest.cpp  LocationSynthFoundExactTest.cpp  LocationSynthTest_SimpleIndex.cpp  LocationSynthUtilsTest.cpp  LocationSynthesingTest.cpp  ServerTest.cpp  SynthFileTest.cpp
test/tests/server_test/request_test/: ExtractDataFromRequest.cpp  InitTest.cpp  ParsedRequestLevelTest.cpp  ReadFromFDTest.cpp  RequestParsingTest.cpp  SocketLevelTest.cpp  URLLevelTest.cpp
test/tests/server_test/response_test/: HandleRequestTest.cpp  SimpleIndexConfigResponseTest.cpp  SimpleResponseTest.cpp
test/tests/server_test/setup_test/: ServerConfigTest.cpp
test/tests/utils_test/: UtilsTest.cpp
test/unit_tests/server_test/functionality_test/: LocationSynthUtilsTest.cpp  SynthFileTest.cpp  SynthIndexTest.cpp
test/unit_tests/server_test/request_test/: ParsedRequestLevelTest.cpp  RequestLineLevelTest.cpp  SocketLevelTest.cpp  URLLevelTest.cpp
test/unit_tests/server_test/response_test/: SimpleIndexConfigResponseTest.cpp  SimpleResponseTest.cpp
test/unit_tests/utils_test/: UtilsTest.cpp
(+166 files in other folders)
